--- a/src-web/index.html
+++ b/src-web/index.html
@@ -1,5 +1,30 @@
-<html>
-    <head>
-        
-    </head>
+<!DOCTYPE html>
+
+<html lang="es">
+
+<head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="bloque">
+        <form action="index.html" method="post">
+            <h1>LOGIN</h1>
+            <input type="text" placeholder="Usuario">
+            <input type="password" placeholder="Contraseña">
+            <input type="submit" value="login">
+        </form>
+        <div class="bloque-left">
+            <a href=""><button class="tb">Sign Up</button></a>
+        </div>
+    </div>
+
+
+
+
+
+</body>
+
 </html>
